# CornerDetections

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Source/: CMakeLists.txt  Main.cpp  Types.h
Source/Processing/: AdaptiveDetection.cpp  AdaptiveDetection.h  Bezier.hpp  CMakeList.txt  Ccr.hpp  Common.h  CornerDetectors.h  Ctar.h  Ctar.hpp  Most.hpp
Source/Validator/: CMakeLists.txt  Parser.hpp  PerformanceMetrics.cpp  PerformanceMetrics.h  Polygon.h  PolygonDataset.hpp
Tests/: AdaptiveDetection_test.cc  CMakeLists.txt  hello_test.cc
