cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0054 NEW)

set(PROJECT_NAME "CornerDetections")
set(CMAKE_CXX_STANDARD 17)

project(${PROJECT_NAME})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/Bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Bin)


# opencv  package
find_package(OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )


add_compile_options(-std=c++17)

add_executable(${PROJECT_NAME}
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/Main.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/Processing/Ctar.hpp


)

target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})


install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Tests/)

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
)
enable_testing()
